<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.recluse.geziyorum.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/appName"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="Welcome to Geziyorum !!!!"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:layout_margin="10dp"
                android:background="@drawable/button_pink"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"/>
            <Button
                android:layout_margin="10dp"
                android:background="@drawable/button_only_frame"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/inputUserName"
            android:drawablePadding="10dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/user_name"/>
        <EditText
            android:id="@+id/inputPassword"
            android:drawablePadding="10dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/remember_me"
                />
            <TextView
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_gravity="end|center_vertical"
                android:text="@string/forgot_your_password"
                android:selectAllOnFocus="true"
                android:linksClickable="true"
                android:autoLink="all"
                android:textStyle="italic"
                android:textColor="@color/dark_blue"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:onClick="LoginOnClick"
            android:drawablePadding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_green"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:text="@string/login" />

    </LinearLayout>
</LinearLayout>
